Fix style in wineryGitLog and set default to collapsed

--- a/org.eclipse.winery.repository.ui/src/app/wineryGitLog/wineryGitLog.component.css
+++ b/org.eclipse.winery.repository.ui/src/app/wineryGitLog/wineryGitLog.component.css
@@ -8,8 +8,10 @@
  */
 
 #wineryGitLogFloat {
+    pointer-events: none;
     position: absolute;
     right: 0px;
+    z-index: 2;
 }
 
 #wineryGitLogContainer {
@@ -23,6 +25,7 @@
 }
 
 #wineryGitLogExpander span {
+    pointer-events: painted;
     position: absolute;
     top: 30px;
     width: 91px;
@@ -32,12 +35,14 @@
 }
 
 #wineryGitLogExpander h3 {
+    pointer-events: auto;
     position: absolute;
     top: 148px;
     left: 11px;
 }
 
 #wineryGitLogDiffs {
+    pointer-events: auto;
     white-space: pre;
     overflow-wrap: normal;
     overflow-x: scroll;
@@ -45,23 +50,24 @@
 }
 
 #wineryGitLogGui {
+    pointer-events: auto;
     grid-column: 3/ span 1;
-    width: 300px;
     background-color: #f3f3f3;
 }
 
 #wineryGitLogCommit {
+    pointer-events: auto;
     grid-column: 3/ span 1;
     display: inline-grid;
     grid-template-columns: 1fr 1fr 1fr;
     margin-left: 5px;
 }
 #wineryGitLogCommitMsg {
+    pointer-events: auto;
     grid-column: 3/ span 1;
 }
 
 table {
-    width: 90%;
     margin-bottom: 20px;
     background-color: transparent;
     border-spacing: 0;
@@ -70,7 +76,6 @@ table {
 }
 
 tbody {
-    width: 90%;
     display: table-row-group;
     vertical-align: middle;
     border-color: inherit;
@@ -83,7 +88,6 @@ tr {
     border-color: inherit;
     width: 100%;
     height: 20px;
-    min-width: 300px;
 }
 
 tr:hover {
@@ -98,6 +102,7 @@ td {
     padding: 8px;
     line-height: 0;
     vertical-align: center;
+    white-space: nowrap;
 }
 
 #srcNameCell {
@@ -105,7 +110,7 @@ td {
 }
 
 #filesList {
-    width: 300px;
+    width: 318px;
     height: 500px;
     overflow: auto;
 }
